k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mhrishad-app-service
spec:
  selector:
    app: mhrishad-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
