k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mhrishad-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mhrishad-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mhrishad-app-service
            port:
              number: 80
